Working version of trading bot